--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -49,7 +49,7 @@
         <a href="/settings">Settings</a>
         <a href="/logout">Logout</a>
         <div class="profile-pic">
-            <img src="../public/images/upload_images/1 st image.png" alt="Profile Picture">
+            <img src="http://localhost:3000/images/upload_images/<%=data[0].image%>" alt="Profile Picture">
         </div>
     </div>
 
